force-app/main/default/objects/Suggestion_Dismissal__c/Suggestion_Dismissal__c.object-meta.xml
<CustomObject>
    <label>Suggestion Dismissal</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Dismissal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestion Dismissals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>