force-app/main/default/objects/Suggestion_Dismissal__c/fields/Dismissal_Key__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Key__c</fullName>
    <externalId>true</externalId>
    <label>Dismissal Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>