force-app/main/default/objects/Suggestion_Dismissal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dismissal_Key__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Action_Name__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>